--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "db:studio": "drizzle-kit studio"
   },
   "dependencies": {
+    "@auth/drizzle-adapter": "^1.5.0",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-icons": "^1.3.0",
@@ -28,11 +29,11 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
-    "drizzle-kit": "^0.24.2",
     "drizzle-orm": "^0.33.0",
     "jose": "^5.9.2",
     "lucide-react": "^0.441.0",
     "next": "15.0.0-canary.152",
+    "next-auth": "5.0.0-beta.21",
     "postcss": "^8.4.47",
     "postgres": "^3.4.4",
     "react": "19.0.0-rc-7771d3a7-20240827",
@@ -45,5 +46,14 @@
     "tailwindcss-react-aria-components": "1.1.5",
     "typescript": "^5.6.2",
     "zod": "^3.23.8"
+  },
+  "devDependencies": {
+    "@biomejs/biome": "^1.9.2",
+    "@tanstack/eslint-plugin-query": "^5.57.2",
+    "drizzle-kit": "^0.24.2",
+    "eslint": "^9.11.1",
+    "eslint-config-next": "^14.2.13",
+    "eslint-plugin-tailwindcss": "^3.17.4",
+    "prettier-plugin-tailwindcss": "^0.6.8"
   }
 }
